# Poker_Game_99

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.zh-TW.md
docs/: rules.md  rules.zh-TW.md
include/: ai_operation.hpp  dealer.hpp  game.hpp  manual_operation.hpp  operation.hpp  player.hpp  poker.hpp
src/: ai_operation.cpp  dealer.cpp  game.cpp  main.cpp  manual_operation.cpp  player.cpp  poker.cpp
